测试资源与环境